--- a/user/Makefile
+++ b/user/Makefile
@@ -12,14 +12,17 @@ all: $(COSMOS_ABI_ARCHIVE)
 # sources
 SRCS_C=$(shell find $(SRC_DIR) -type f -iname '*.c')
 HEADERS_C=$(shell find $(SRC_DIR) -type f -iname '*.h')
+SRCS_ASM=$(shell find $(SRC_DIR) -type f -iname '*.asm')
 
 # object files
 OBJS_C=$(subst $(SRC_DIR)/, , $(SRCS_C:.c=.o))
+OBJS_ASM=$(subst $(SRC_DIR)/, , $(SRCS_ASM:.asm=.o))
 OBJS=$(OBJS_C) $(OBJS_ASM)
 
 # set search paths
 vpath %.c .
 vpath %.h .
+vpath %.asm .
 
 $(COSMOS_ABI_ARCHIVE): $(OBJS)
 	$(AR) $(ARFLAGS) $@ $^
@@ -28,6 +31,10 @@ $(COSMOS_ABI_ARCHIVE): $(OBJS)
 %.o: %.c $(HEADERS_C)
 	$(CC) $(CFLAGS) $(EXTRA_CFLAGS) -c -o $@ $<
 
+# asm files	
+%.o: %.asm
+	$(NASM) $(NASMARGS) $< -o $@ 
+	
 clean:
 	$(RM) $(OBJS)
 	$(RM) $(ARCHIVE_FILE)
