better init and abi build

--- a/user/Makefile
+++ b/user/Makefile
@@ -2,30 +2,37 @@ include ../scripts/mk/flags.mk
 include ../scripts/mk/build.mk
 
 COSMOS_ABI_ARCHIVE=cosmos_abi.a
+COSMOS_INIT=cosmos_init
 
 EXTRA_CFLAGS= -I.
 
 SRC_DIR=.
 
-all: $(COSMOS_ABI_ARCHIVE) init.o
+all: $(COSMOS_ABI_ARCHIVE) $(COSMOS_INIT)
 
-# sources
-SRCS_C=$(shell find $(SRC_DIR) -type f -iname '*.c')
-HEADERS_C=$(shell find $(SRC_DIR) -type f -iname '*.h')
-SRCS_ASM=$(shell find $(SRC_DIR) -type f -iname '*.asm')
+# ABI sources
+SRCS_C=$(shell find $(SRC_DIR)/abi -type f -iname '*.c')
+HEADERS_C=$(shell find $(SRC_DIR)/abi -type f -iname '*.h')
+SRCS_ASM=$(shell find $(SRC_DIR)/abi -type f -iname '*.asm')
 
-# object files
+# ABI object files
 OBJS_C=$(subst $(SRC_DIR)/, , $(SRCS_C:.c=.o))
 OBJS_ASM=$(subst $(SRC_DIR)/, , $(SRCS_ASM:.asm=.o))
 OBJS=$(OBJS_C) $(OBJS_ASM)
+
+init/init.o: init/init.h init/init.C 
+	$(CC) $(CFLAGS) $(EXTRA_CFLAGS) -c -o $@ $<
+
+$(COSMOS_INIT): $(COSMOS_ABI_ARCHIVE) init/init.o
+	$(LD) -m elf_x86_64 -o $(COSMOS_INIT) $(COSMOS_ABI_ARCHIVE)
+
+$(COSMOS_ABI_ARCHIVE): $(OBJS)
+	$(AR) $(ARFLAGS) $(COSMOS_ABI_ARCHIVE) $(OBJS)
 
 # set search paths
 vpath %.c .
 vpath %.h .
 vpath %.asm .
-
-$(COSMOS_ABI_ARCHIVE): abi/posix/posix_abi.o abi/cosmos/cosmos_abi.o abi/bdos/bdos_abi.o
-	$(AR) $(ARFLAGS) $(COSMOS_ABI_ARCHIVE) abi/posix/posix_abi.o abi/cosmos/cosmos_abi.o abi/bdos/bdos_abi.o
 
 # C files	
 %.o: %.c $(HEADERS_C)
@@ -36,8 +43,7 @@ $(COSMOS_ABI_ARCHIVE): abi/posix/posix_abi.o abi/cosmos/cosmos_abi.o abi/bdos/bd
 	$(NASM) $(NASMARGS) $< -o $@ 
 	
 clean:
+	$(RM) init/init.o
 	$(RM) $(OBJS)
-	$(RM) $(ARCHIVE_FILE)
-	$(RM) $(KERNEL_ELF)
-	$(RM) $(KERNEL_BIN)
-	$(RM) $(KERNEL_MAP)
+	$(RM) $(COSMOS_ABI_ARCHIVE)
+	$(RM) $(COSMOS_INIT)
