move ktool under src

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ FROM ubuntu:20.04
 RUN set -x \
 	&& apt-get update \
 	&& apt-get install -y wget make nasm patch clang-format build-essential \
-	binutils gcc-10 git \
+	binutils gcc-10 git iwyu \
 	&& rm -rf /var/lib/apt/lists/*
 
 WORKDIR /work
