--- a/src/Makefile
+++ b/src/Makefile
@@ -71,10 +71,7 @@ qemu-debug: bootimage
 lint:
 	clang-format -n --Werror -style=file $(SRC_FILES)
 
-header-fix:
-	cd kernel && $(MAKE) -k "CC=iwyu -Xiwyu --mapping_file=iwyu_mapping.imp -resource-dir . -isystem. -I." all 2>&1 > /dev/null | \
-	fix_include --reorder --nocomments --nosafe_headers 
-
 header-check:
+	./util/iwyu_map_check.sh kernel kernel/iwyu_mapping.imp
 	cd kernel && $(MAKE) -k "CC=iwyu -Xiwyu --mapping_file=iwyu_mapping.imp -resource-dir . -isystem. -I." all 2>&1 > /dev/null | \
-	fix_include --noreorder --comments --nosafe_headers --dry_run
+	fix_include --reorder --comments --nosafe_headers --dry_run
