--- a/src/Makefile
+++ b/src/Makefile
@@ -74,7 +74,7 @@ lint:
 header-check:
 	./util/iwyu_map_check.sh kernel kernel/iwyu_mapping.imp
 	cd kernel && $(MAKE) -k "CC=iwyu -Xiwyu --mapping_file=iwyu_mapping.imp -resource-dir . -isystem. -I." all 2>&1 > /dev/null | \
-	fix_include --reorder --comments --nosafe_headers --dry_run
+	fix_include --noreorder --comments --nosafe_headers --dry_run
 
 header-fix:
 	./util/iwyu_map_check.sh kernel kernel/iwyu_mapping.imp
