--- a/src/user/init/Makefile
+++ b/src/user/init/Makefile
@@ -10,11 +10,11 @@ SRC_DIR=.
 
 all: $(COSMOS_INIT)
 
-init.o: init.h init.c
-	$(CC) $(CFLAGS) $(EXTRA_CFLAGS) -c -o init.o init.c
+init.o: init.hpp init.cpp
+	$(CC) $(CFLAGS) $(EXTRA_CFLAGS) -c -o init.o init.cpp
 
 $(COSMOS_INIT): $(COSMOS_ABI_ARCHIVE) init.o
-	$(LD) -m elf_x86_64 -o $(COSMOS_INIT) init.o $(COSMOS_ABI_ARCHIVE)
+	$(LD) -m elf_x86_64 -o $(COSMOS_INIT) $(COSMOS_ABI_ARCHIVE) init.o 
 	
 clean:
 	$(RM) *.o
