--- a/src/user/init/Makefile
+++ b/src/user/init/Makefile
@@ -14,7 +14,7 @@ init.o: init.hpp init.cpp
 	$(CC) $(CFLAGS) $(EXTRA_CFLAGS) -c -o init.o init.cpp
 
 $(COSMOS_INIT): $(COSMOS_ABI_ARCHIVE) init.o
-	$(LD) -m elf_x86_64 -o $(COSMOS_INIT) $(COSMOS_ABI_ARCHIVE) init.o 
+	$(LD) -m elf_x86_64 -o $(COSMOS_INIT) -L $(COSMOS_ABI_ARCHIVE) init.o   
 	
 clean:
 	$(RM) *.o
