--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -4,7 +4,7 @@ include ../mk/build.mk
 COSMOS_INITRD_IMAGE=initrd.img
 COSMOS_LIB_ARCHIVE=lib/cosmos_lib.a
 COSMOS_INIT=init/cosmos_init
-COSMOS_TEST_BINARY=initfs/test.bin
+COSMOS_TEST_BINARY=fs/initfs/test.bin
 MKINITRD=../util/mkinitrd/mkinitrd
 
 EXTRA_CFLAGS= -I.
@@ -19,11 +19,11 @@ $(COSMOS_LIB_ARCHIVE):
 $(COSMOS_INIT): $(COSMOS_LIB_ARCHIVE)
 	make -C init
 
-$(COSMOS_TEST_BINARY): initfs/test.asm
-	$(NASM) $(NASMFLATARGS) -o $(COSMOS_TEST_BINARY) initfs/test.asm
+$(COSMOS_TEST_BINARY): fs/initfs/test.asm
+	$(NASM) $(NASMFLATARGS) -o $(COSMOS_TEST_BINARY) fs/initfs/test.asm
 
 $(COSMOS_INITRD_IMAGE): $(COSMOS_INIT) $(COSMOS_LIB_ARCHIVE)  $(COSMOS_TEST_BINARY)
-	$(MKINITRD) $(COSMOS_INIT) $(COSMOS_LIB_ARCHIVE)  $(COSMOS_TEST_BINARY) initfs/welcome.txt initfs/testdata.txt initfs/cosmos.bmp initfs/zap-vga16.psf
+	$(MKINITRD) $(COSMOS_INIT) $(COSMOS_LIB_ARCHIVE)  $(COSMOS_TEST_BINARY) fs/initfs/welcome.txt fs/initfs/testdata.txt fs/initfs/cosmos.bmp fs/initfs/zap-vga16.psf
 	mv initrd.img ../img/
 	
 clean:
