--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -3,7 +3,8 @@ include ../mk/build.mk
 
 COSMOS_INITRD_IMAGE=initrd.img
 COSMOS_LIB_ARCHIVE=lib/libcosmos.a
-COSMOS_INIT=init/cosmos_init
+COSMOS_INIT=apps/init/init
+COSMOS_TERM=apps/term/term
 COSMOS_TEST_BINARY=fs/initfs/test.bin
 MKINITRD=../util/mkinitrd/mkinitrd
 
@@ -16,15 +17,12 @@ all: $(COSMOS_INITRD_IMAGE)
 $(COSMOS_LIB_ARCHIVE):
 	make -C lib
 
-$(COSMOS_INIT): $(COSMOS_LIB_ARCHIVE)
-	make -C init
-
 $(COSMOS_TEST_BINARY): fs/initfs/test.asm
 	$(NASM) $(NASMFLATARGS) -o $(COSMOS_TEST_BINARY) fs/initfs/test.asm
 
-$(COSMOS_INITRD_IMAGE): $(COSMOS_INIT) $(COSMOS_LIB_ARCHIVE)  $(COSMOS_TEST_BINARY)
+$(COSMOS_INITRD_IMAGE): $(COSMOS_LIB_ARCHIVE)  $(COSMOS_TEST_BINARY)
+	make -C apps
 	$(MKINITRD) fs/initfs/ $(COSMOS_INIT) $(COSMOS_LIB_ARCHIVE) $(COSMOS_TEST_BINARY) 
-
 	mv initrd.img ../img/
 	
 clean:
@@ -33,6 +31,6 @@ clean:
 	$(RM) -r *.bin
 	$(RM) $(COSMOS_TEST_BINARY)
 	$(RM) $(COSMOS_INITRD_IMAGE)
-	cd init; make clean
+	cd apps; make clean
 	cd lib; make clean
 
