--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -39,9 +39,9 @@ $(KERNEL_BIN): $(KERNEL_ELF)
 
 $(KERNEL_ELF): $(ARCHIVE_FILE)
 ifeq ($(TARGET_PLATFORM),TARGET_PLATFORM_i386)
-	$(LD) $(LDFLAGS) -o $(KERNEL_ELF) $(ARCHIVE_FILE)
+	$(LD) $(KERNEL_LDFLAGS) -o $(KERNEL_ELF) $(ARCHIVE_FILE)
 else
-	$(LD) $(LDFLAGS) -o $(KERNEL_ELF) $(ARCHIVE_FILE)
+	$(LD) $(KERNEL_LDFLAGS) -o $(KERNEL_ELF) $(ARCHIVE_FILE)
 endif
 
 $(ARCHIVE_FILE): $(ARCHIVES) $(OBJS)
