--- a/src/user/apps/init/Makefile
+++ b/src/user/apps/init/Makefile
@@ -1,9 +1,8 @@
 include ../../../mk/flags.mk
 include ../../../mk/build.mk
+include ../user.mk
 
 COSMOS_INIT=init
-COSMOS_ABI_ARCHIVE=../../lib/libcosmos.a
-EXTRA_CFLAGS= -I. -I../../lib/
 
 SRC_DIR=.
 
@@ -13,7 +12,7 @@ init.o: init.hpp init.cpp
 	$(CC) $(USER_CFLAGS) $(EXTRA_CFLAGS) -c -o init.o init.cpp
 
 $(COSMOS_INIT): $(COSMOS_ABI_ARCHIVE) init.o
-	$(LD) -m elf_x86_64 -o $(COSMOS_INIT) -L $(COSMOS_ABI_ARCHIVE) init.o   
+	$(LD) -m elf_x86_64 -o $(COSMOS_INIT) init.o $(COSMOS_ABI_ARCHIVE)  
 	
 clean:
 	$(RM) *.o
