--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ src/util/mkinitrd/mkinitrd
 .vscode
 **/dump.dat
 **/qemu.log
+**/net0.dat
 user/cosmos_init
 util/mkinitrd/mkinitrd
 src/user/init/cosmos_init
