--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@ CRUFT_FILES=$(shell find . -type f \( -name "dump.dat" -o \
 all: subsystems
 .PHONY: clean header-check header-fix
 
-bootimage: lint subsystems blank-disk
+bootimage: header-check lint subsystems blank-disk
 	# make a file
 	#$(DD) if=/dev/zero of=$(BOOTIMAGE) bs=32768 count=129024
 	test -f $(BOOTIMAGE) || $(DD) if=/dev/zero of=$(BOOTIMAGE) bs=32768 count=129024 
