--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,13 @@ jobs:
       - name: nasm
         run: sudo apt install nasm
 
-      - name: build
+      - name: lint
+        run: cd src;make lint
+
+      - name: header-check
+        run: cd src;make header-check
+      
+        - name: build
         run: cd src;make
 
   build-osx:
@@ -50,6 +56,12 @@ jobs:
 
       - name: clang-format
         run: brew install clang-format
+
+      - name: lint
+        run: cd src;make lint
+
+      - name: header-check
+        run: cd src;make header-check
 
       - name: build
         run: cd src;make
