--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -32,6 +32,7 @@ $(COSMOS_ROOT_IMAGE):
 	$(RM) $(COSMOS_ROOT_IMAGE)
 	$(DD) if=/dev/zero of=$(COSMOS_ROOT_IMAGE) bs=32768 count=32768
 	$(DOSFSTOOLS_MKFS_MSDOS) -F 16 $(COSMOS_ROOT_IMAGE)
+	$(MCOPY) -s -i $(COSMOS_ROOT_IMAGE) fs/rootfs/* ::/
 	mv $(COSMOS_ROOT_IMAGE) ../img/
 
 clean:
