--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: install-prereqs
-        run: sudo apt install -y wget make nasm patch clang-format build-essential binutils gcc-10 git iwyu curl mtools dosfstools
+        run: sudo apt install -y wget make nasm patch clang-format build-essential binutils gcc-10 git iwyu curl mtools
 
       - name: lint
         run: cd src;make lint
@@ -46,7 +46,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: install-prereqs
-        run: brew install make x86_64-elf-gcc nasm clang-format wget git iwyu curl mtools dosfstools
+        run: brew install make x86_64-elf-gcc nasm clang-format wget git iwyu curl mtools
         
       - name: lint
         run: cd src;make lint
