--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -2,7 +2,6 @@ include ../mk/flags.mk
 include ../mk/build.mk
 include ../mk/mtools.mk
 
-COSMOS_ROOT_IMAGE=root.img
 COSMOS_INITRD_IMAGE=initrd.img
 COSMOS_LIB_ARCHIVE=lib/libcosmos.a
 COSMOS_INIT=apps/init/init
@@ -14,7 +13,7 @@ EXTRA_CFLAGS= -I.
 
 SRC_DIR=.
 
-all: $(COSMOS_INITRD_IMAGE) $(COSMOS_ROOT_IMAGE)
+all: $(COSMOS_INITRD_IMAGE) rootfs
 
 $(COSMOS_LIB_ARCHIVE):
 	make -C lib
@@ -28,14 +27,8 @@ $(COSMOS_INITRD_IMAGE): $(COSMOS_LIB_ARCHIVE)  $(COSMOS_TEST_BINARY)
 	$(MKINITRD) fs/initfs/ $(COSMOS_INIT) $(COSMOS_LIB_ARCHIVE) $(COSMOS_TEST_BINARY) 
 	mv $(COSMOS_INITRD_IMAGE) ../img/
 
-$(COSMOS_ROOT_IMAGE):
-	$(RM) $(COSMOS_ROOT_IMAGE)
-	$(DD) if=/dev/zero of=$(COSMOS_ROOT_IMAGE) bs=32768 count=3200
-	$(MFORMAT) -h 64 -s 32 -t 100 -v cosmos -i $(COSMOS_ROOT_IMAGE)
-	$(MCOPY) -s -i $(COSMOS_ROOT_IMAGE) fs/rootfs/* ::/
-	$(MMD) -i $(COSMOS_ROOT_IMAGE) lib
-	$(MCOPY) -s -i $(COSMOS_ROOT_IMAGE) lib/* ::/lib
-	mv $(COSMOS_ROOT_IMAGE) ../img/
+rootfs:
+	cd mkroot ; make clean ; make
 
 clean:
 	$(RM) -r *.o
@@ -43,7 +36,7 @@ clean:
 	$(RM) -r *.bin
 	$(RM) $(COSMOS_TEST_BINARY)
 	$(RM) $(COSMOS_INITRD_IMAGE)
-	$(RM) $(COSMOS_ROOT_IMAGE)
+	cd mkroot; make clean
 	cd apps; make clean
 	cd lib; make clean
 
