--- a/src/user/mkroot/Makefile
+++ b/src/user/mkroot/Makefile
@@ -19,6 +19,7 @@ buildfs:
 	mkdir $(ROOT_FS_TEMP)/bin
 	cp ../apps/init/init $(ROOT_FS_TEMP)/bin/
 	cp ../apps/term/term $(ROOT_FS_TEMP)/bin/
+	cp ../apps/ls/ls $(ROOT_FS_TEMP)/bin/
 
 mkfat16: mkmtemp
 	$(DD) if=/dev/zero of=$(FAT16_ROOT) bs=512 count=20000 && \
