--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -6,7 +6,7 @@ COSMOS_INITRD_IMAGE=initrd.img
 COSMOS_LIB_ARCHIVE=lib/libcosmos.a
 COSMOS_INIT=apps/init/init
 COSMOS_TERM=apps/term/term
-COSMOS_TEST_BINARY=fs/initfs/test.bin
+COSMOS_TEST_BINARY=fs/rootfs/test.bin
 MKINITRD=../util/mkinitrd/mkinitrd
 
 EXTRA_CFLAGS= -I.
@@ -18,13 +18,13 @@ all: $(COSMOS_INITRD_IMAGE) rootfs
 $(COSMOS_LIB_ARCHIVE):
 	make -C lib
 
-$(COSMOS_TEST_BINARY): fs/initfs/test.asm
-	$(NASM) $(NASMARGSFLAT) -o $(COSMOS_TEST_BINARY) fs/initfs/test.asm
+$(COSMOS_TEST_BINARY): fs/rootfs/test.asm
+	$(NASM) $(NASMARGSFLAT) -o $(COSMOS_TEST_BINARY) fs/rootfs/test.asm
 
 $(COSMOS_INITRD_IMAGE): $(COSMOS_LIB_ARCHIVE)  $(COSMOS_TEST_BINARY)
 	$(RM) $(COSMOS_INITRD_IMAGE)
 	make -C apps
-	$(MKINITRD) fs/initfs/ $(COSMOS_INIT) $(COSMOS_LIB_ARCHIVE) $(COSMOS_TEST_BINARY) 
+	$(MKINITRD) fs/initfs/ 
 	mv $(COSMOS_INITRD_IMAGE) ../img/
 
 rootfs:
