--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -7,6 +7,7 @@ COSMOS_LIB_ARCHIVE=lib/libcosmos.a
 COSMOS_INIT=apps/init/init
 COSMOS_TERM=apps/term/term
 COSMOS_TEST_BINARY=fs/rootfs/test.bin
+COSMOS_TEST_BINARY_ELF=fs/rootfs/test.elf
 MKINITRD=../util/mkinitrd/mkinitrd
 
 EXTRA_CFLAGS= -I.
@@ -21,7 +22,11 @@ $(COSMOS_LIB_ARCHIVE):
 $(COSMOS_TEST_BINARY): fs/rootfs/test.asm
 	$(NASM) $(NASMARGSFLAT) -o $(COSMOS_TEST_BINARY) fs/rootfs/test.asm
 
-$(COSMOS_INITRD_IMAGE): $(COSMOS_LIB_ARCHIVE)  $(COSMOS_TEST_BINARY)
+$(COSMOS_TEST_BINARY_ELF): fs/rootfs/test.asm
+	$(NASM) $(NASMARGS) -o fs/rootfs/test.o fs/rootfs/test.asm
+	$(LD) -m elf_x86_64 -o $(COSMOS_TEST_BINARY_ELF) fs/rootfs/test.o
+
+$(COSMOS_INITRD_IMAGE): $(COSMOS_LIB_ARCHIVE) $(COSMOS_TEST_BINARY) $(COSMOS_TEST_BINARY_ELF)
 	$(RM) $(COSMOS_INITRD_IMAGE)
 	make -C apps
 	$(MKINITRD) fs/initfs/ 
