--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -23,7 +23,7 @@ $(COSMOS_TEST_BINARY): fs/rootfs/test.c fs/rootfs/syscall.asm
 	$(RM) fs/rootfs/*.o
 	$(NASM) $(NASMARGS) -o fs/rootfs/syscall.o fs/rootfs/syscall.asm
 	$(CC) $(USER_CFLAGS) $(EXTRA_CFLAGS) -c -o fs/rootfs/test.o fs/rootfs/test.c
-	$(LD) -m elf_x86_64 -o $(COSMOS_TEST_BINARY_ELF) fs/rootfs/test.o fs/rootfs/syscall.o   
+	$(LD) -m elf_x86_64 -o $(COSMOS_TEST_BINARY_ELF) -Map fs/rootfs/test.map fs/rootfs/test.o fs/rootfs/syscall.o   
 	$(OBJCOPY) -O binary $(COSMOS_TEST_BINARY_ELF) $(COSMOS_TEST_BINARY)  
 
 $(COSMOS_INITRD_IMAGE): $(COSMOS_LIB_ARCHIVE) $(COSMOS_TEST_BINARY) $(COSMOS_TEST_BINARY_ELF)
