refactor test into user/apps/test

--- a/src/user/apps/Makefile
+++ b/src/user/apps/Makefile
@@ -1,14 +1,18 @@
 include ../../mk/flags.mk
 include ../../mk/build.mk
 
-all: term/term init/init
+all: term/term init/init test/test
 
 term/term:
 	cd term && make all
 
 init/init:
 	cd init && make all
-	
+
+test/test:
+	cd test && make all
+
 clean:
 	cd term && make clean
 	cd init && make clean
+	cd test && make clean
