--- a/src/user/apps/test/Makefile
+++ b/src/user/apps/test/Makefile
@@ -6,14 +6,14 @@ SRC_DIR=.
 
 all: test.bin
 
-test.o: test.c syscall.h
+test.o: test.c ../../lib/abi/syscall.h
 	$(CC) $(USER_CFLAGS) $(EXTRA_CFLAGS) -c -o test.o test.c
 
 syscall.o: syscall.asm
 	$(NASM) $(NASMARGS) -o syscall.o syscall.asm
 
-test.elf: syscall.o test.o
-	$(LD) -m elf_x86_64 -o test.elf test.o syscall.o   
+test.elf: ../../lib/abi/syscall.o test.o
+	$(LD) -m elf_x86_64 -o test.elf test.o ../../lib/abi/syscall.o   
 	
 test.bin: test.elf
 	$(OBJCOPY) -O binary test.elf test.bin  
