test.c using the ABI

--- a/src/user/apps/test/Makefile
+++ b/src/user/apps/test/Makefile
@@ -12,8 +12,8 @@ test.o: test.c ../../lib/abi/syscall.h
 #syscall.o: syscall.asm
 #	$(NASM) $(NASMARGS) -o syscall.o syscall.asm
 
-test.elf: ../../lib/abi/syscall.o test.o
-	$(LD) -m elf_x86_64 -o test.elf test.o ../../lib/abi/syscall.o   
+test.elf: ../../lib/abi/syscall.o ../../lib/abi/abi.o test.o
+	$(LD) -m elf_x86_64 -o test.elf test.o ../../lib/abi/syscall.o ../../lib/abi/abi.o
 	
 test.bin: test.elf
 	$(OBJCOPY) -O binary test.elf test.bin  
