--- a/src/user/apps/test/Makefile
+++ b/src/user/apps/test/Makefile
@@ -6,13 +6,13 @@ SRC_DIR=.
 
 all: test.bin
 
-test.o: test.c ../../lib/abi/syscall.h
+test.o: test.c
 	$(CC) $(USER_CFLAGS) $(EXTRA_CFLAGS) -c -o test.o test.c
 
 #syscall.o: syscall.asm
 #	$(NASM) $(NASMARGS) -o syscall.o syscall.asm
 
-test.elf: ../../lib/abi/syscall.o ../../lib/abi/abi.o test.o
+test.elf: test.o
 	$(LD) -m elf_x86_64 -o test.elf test.o ../../lib/abi/syscall.o ../../lib/abi/abi.o
 	
 test.bin: test.elf
