--- a/src/user/apps/test/Makefile
+++ b/src/user/apps/test/Makefile
@@ -1,21 +1,3 @@
-include ../../../mk/flags.mk
-include ../../../mk/build.mk
-include ../user.mk
+APPNAME=test
 
-SRC_DIR=.
-
-all: test.bin
-
-test.o: test.c
-	$(CC) $(USER_CFLAGS) $(EXTRA_CFLAGS) -c -o test.o test.c
-
-test.elf: test.o
-	$(LD) -m elf_x86_64 -o test.elf test.o ../../lib/abi/syscall.o ../../lib/abi/abi.o
-	
-test.bin: test.elf
-	$(OBJCOPY) -O binary test.elf test.bin  
-
-clean:
-	$(RM) *.o
-	$(RM) *.bin
-	$(RM) *.elf
+include ../app.mk
