--- a/src/user/apps/ls/Makefile
+++ b/src/user/apps/ls/Makefile
@@ -1,19 +1,3 @@
-include ../../../mk/flags.mk
-include ../../../mk/build.mk
-include ../user.mk
+APPNAME=ls
 
-LS=ls
-
-SRC_DIR=.
-
-all: $(LS)
-
-ls.o: ls.hpp ls.cpp
-	$(CC) $(USER_CFLAGS) $(EXTRA_CFLAGS) -c -o ls.o ls.cpp
-
-$(LS): $(COSMOS_ABI_ARCHIVE) ls.o
-	$(LD) -m elf_x86_64 -o $(LS) ls.o $(COSMOS_ABI_ARCHIVE)  
-	
-clean:
-	$(RM) *.o
-	$(RM) $(LS)
+include ../app.mk
