--- a/src/user/apps/term/Makefile
+++ b/src/user/apps/term/Makefile
@@ -1,19 +1,3 @@
-include ../../../mk/flags.mk
-include ../../../mk/build.mk
-include ../user.mk
+APPNAME=term
 
-TERM=term
-
-SRC_DIR=.
-
-all: $(TERM)
-
-term.o: term.hpp term.cpp
-	$(CC) $(USER_CFLAGS) $(EXTRA_CFLAGS) -c -o term.o term.cpp
-
-$(TERM): $(COSMOS_ABI_ARCHIVE) term.o
-	$(LD) -m elf_x86_64 -o $(TERM) term.o $(COSMOS_ABI_ARCHIVE)  
-	
-clean:
-	$(RM) *.o
-	$(RM) $(TERM)
+include ../app.mk
